--- a/style.css
+++ b/style.css
@@ -243,10 +243,8 @@ footer {
     text-align: center;
     padding: 1rem 2rem;
     font-size: 0.9rem;
-    position: fixed;
+    position: sticky;
     bottom: 0;
-    left: 0;
-    right: 0;
     z-index: 100;
 }
 
